@@ -1,3 +1,6 @@
+Wed  Mar 23 2005	H. Wade Minter (minter@lunenburg.org)
+     * Add code to do an XML-RPC version check on start.
+
 Fri  Mar 18 2005	H. Wade Minter (minter@lunenburg.org)
      * Don't change the modtime on an upgrade.
 
